# elai-intent-engine

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
bruno/: Predict - Batch.bru  Predict - Single.bru  bruno.json
docker/: Dockerfile  Dockerfile.dockerignore  docker-compose.yml
docs/: implementation_decisions.md  ubuntu_setup_guide.md
src/elai_intent_engine/: main.py
src/elai_intent_engine/api/: dependencies.py
src/elai_intent_engine/api/routers/: __init__.py  predictions.py
src/elai_intent_engine/models/: __init__.py
src/elai_intent_engine/models/api/: __init__.py  predictions.py
src/elai_intent_engine/models/db/: __init__.py  predictions.py
src/elai_intent_engine/repositories/: predictions.py
src/elai_intent_engine/services/: database.py  feature_engineering.py  ml.py
src/elai_intent_engine/services/api/: __init__.py  predictions.py
src/elai_intent_engine/utils/: config.py  enums.py  logging.py
tests/: conftest.py  test_api.py  test_feature_engineering.py  test_ml.py  test_predictions_repository.py  test_predictions_service.py
